...
        }}
      />
      <HomeTabs.Screen
        name="exercises"
        component={ExerciseStackScreen}
        options={{
          tabBarTestID: "navExercises",
          tabBarLabel: t("exercises"),
          tabBarIcon: exercisesIcon,
        }}
      />
      <HomeTabs.Screen
        name="_home"
...
